# api-tools

./: .gitignore  .travis.yml  API.md  LICENSE  Makefile  README.md  api-tools.cabal  api-tools.har  changelog  example.md  example2.md  gen_docs.hs  stack-7.0.yaml  test.hs  test.txt
.github/workflows/: haskell-ci.yml
Data/API/: API.hs  Generate.hs  Markdown.hs  Parse.hs  Parse.i  Parse.y  Scan.hs  Scan.x  Types.hs
Data/API/API/: DSL.hs  Gen.hs
Data/API/Aeson/: Generate.hs  Markdown.hs  Spec.hs
Data/API/Parser/: Scan.hs  Scan.x
Data/API/Test/: DSL.hs  Gen.hs  GenerateTests.hs  SimpleTest.hs
Example/: Gen.hs  Spec.hs
bench/: Main.hs
main/: MigrationTool.hs  PerfTest.hs
main/Data/API/: MigrationTool.hs  PerfTest.hs
src/Data/API/: API.hs  Changes.hs  Doc.hs  Error.hs  JSON.hs  JSONToCBOR.hs  Markdown.hs  NormalForm.hs  PP.hs  Parse.hs  Parse.y  Scan.hs  Scan.x  TH.hs  Time.hs  Tools.hs  Tutorial.hs  Types.hs  Utils.hs  Value.hs
src/Data/API/API/: DSL.hs  Gen.hs
src/Data/API/Changes/: Types.hs
src/Data/API/Doc/: Call.hs  Dir.hs  Subst.hs  Types.hs
src/Data/API/JSON/: Compat.hs
src/Data/API/TH/: Compat.hs
src/Data/API/Tools/: CBOR.hs  Combinators.hs  Datatypes.hs  DeepSeq.hs  Enum.hs  Example.hs  JSON.hs  JSONTests.hs  Lens.hs  QuickCheck.hs  SafeCopy.hs  Traversal.hs
src/Data/Binary/Serialise/CBOR/: Extra.hs  JSON.hs
src/Text/: Regex.hs
tests/Data/API/Test/: DSL.hs  Gen.hs  JSON.hs  Main.hs  Migration.hs  MigrationData.hs  Time.hs
